strong refactor
